tests/baselines/reference/parser509546_2.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509546_2.ts(3,14): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509546_2.ts (1 errors) ====
    "use strict";
    
    export class Logger { 
                 ~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
         public
    }
    